--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@600&display=swap");
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+* {
+  background-color: #121213;
+}
+
+body {
+  height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
 .App {
-  text-align: center;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App .Editors {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.App button {
+  font-family: "JetBrains Mono", monospace;
+  color: white;
+  width: 8%;
+  border: none;
+}
+
+.App .cfileinput::-webkit-file-upload-button {
+  visibility: hidden;
+}
+
+.App input[type="file"] {
+  color: #121213;
+}
+
+.App .cfileinput::before {
+  content: "Load";
+  font-family: "JetBrains Mono", monospace;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.texta {
+  width: 50%;
+  padding: 20px;
+  resize: none;
+  color: white;
+  border: none;
+  outline: none;
+  font-family: "JetBrains Mono", monospace;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mdown {
+  height: 100vh;
+  padding: 8px;
+  outline: none;
+  color: white;
+}
+
+.mdown .edit {
+  width: 50%;
+}
+
+.mdown .preview {
+  width: 100%;
 }
