--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 * {
-  background-color: #121213;
+  background-color: #0c0c0c;
 }
 
 body {
@@ -40,10 +40,11 @@ html {
 }
 
 .App input {
-  color: #121213;
+  color: transparent;
 }
 
 .App .cfileinput::before {
+  margin-left: 1%;
   content: "Load";
   font-family: "JetBrains Mono", monospace;
   color: white;
@@ -80,6 +81,8 @@ html {
 }
 
 .mdown .preview {
+  position: absolute;
+  text-align: center;
   max-width: 100%;
   width: 100%;
 }
